--- a/composer.json
+++ b/composer.json
@@ -44,5 +44,7 @@
         "post-update-cmd":[
             "@test"
         ]
-    }
+    },
+    "license": "GPL-3.0",
+    "bin":["buscar-cursos.php"]
 }
